Up GWT version to 2.8.0-rc3